# mistral-ocr-streamlit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  app.py  cli.py  ocr_utils.py  pyproject.toml
.github/workflows/: lint.yaml
src/mistral_ocr/: __init__.py  app.py  cache_utils.py  ocr_utils.py
tests/: test_cache.py  test_e2e.py  test_file_discovery.py  test_utils.py
