[project]
name = "mistral-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai>=1.5.1",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.1",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = ["ruff>=0.9.10"]

[tool.ruff]
exclude = ["*.ipynb"]
